--- a/001/app/config/routing.yml
+++ b/001/app/config/routing.yml
@@ -1,3 +1,7 @@
+gibson_cliente:
+    resource: "@GibsonClienteBundle/Resources/config/routing.yml"
+    prefix:   /
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
